--- a/Actividad4A.css
+++ b/Actividad4A.css
@@ -78,7 +78,8 @@ texto normal: font weight 400
 
 .title {
     font-family: 'Poppins', sans-serif;
-
+    font-size: 25px;
+    font-weight: 800;
     margin-bottom: 20px;
 }
 
